How to run the JavaFX application